@@ -1,7 +1,8 @@
 ﻿[B]Changelog[/B]
-Fixed: UR Play changed subtitle formats (Fixes #784)
+Fixed: SVT upgraded some of their genres (Barn, Sport) to the new format (Fixes #787)
 
 [I]Previous changes[/I]N
+Fixed: UR Play changed subtitle formats (Fixes #784)
 Fixed: SVT Search(Fixes #782)
 Fixed: TV4 Play updated their Video API (Fixes #779)
 Fixed: SVT updated their API again :sigh: (Fixes #776)
